@@ -46,8 +46,8 @@ public class InternalMaterialDesignIcon implements JabRefIcon {
 
         // Override the default color from the css files
         color.ifPresent(color -> fontIcon.setStyle(fontIcon.getStyle() +
-                String.format("-fx-fill: %s;", ColorUtil.toRGBCode(color)) +
-                String.format("-fx-icon-color: %s;", ColorUtil.toRGBCode(color))));
+                "-fx-fill: %s;".formatted(ColorUtil.toRGBCode(color)) +
+                "-fx-icon-color: %s;".formatted(ColorUtil.toRGBCode(color))));
 
         return fontIcon;
     }
@@ -73,6 +73,6 @@ public class InternalMaterialDesignIcon implements JabRefIcon {
 
     @Override
     public Ikon getIkon() {
-        return icons.get(0);
+        return icons.getFirst();
     }
 }
